@@ -20,6 +20,7 @@ TinyWall Changelog
 - Processes window remembers size
 - Fix: Don't leave locked files on service exit
 - Fix: Race condition between update check and service message loop
+- Don't list duplicate processes in Processes window
 
 ---------------------
 
